Making ruby glow not call if error